<resources>
    <string name="app_name">Sistema de Ahorro</string>
    <string name="fecha_actual"></string>
    <string name="boton_nuevo">Nuevo Ingreso</string>
    <string name="boton_egreso">Nuevo Egreso</string>
    <string name="boton_detalle">Detalle</string>
    <string name="label_ingreso">Ingresos:</string>
    <string name="label_egreso">Egresos:</string>
    <string name="label_gastos">Gastos T. Crédito:</string>
    <string name="default_fecha">dd/mm/aa</string>
    <string name="detalle">Detalle</string>
    <string name="no_tiene_datos_cargados">No tiene datos cargados.</string>
    <string name="volver">Volver</string>
    <string-array name="conceptos_ingresos">
        <item>Sueldo</item>
        <item>Prestamo</item>
        <item>Otros</item>
    </string-array>
    <string-array name="conceptos_egresos">
        <item>Efectivo</item>
        <item>Debito</item>
        <item>Transferencia</item>
        <item>Tarjeta de Credito</item>
    </string-array>
    <string-array name="categoria_egreso">
        <item>Mercados</item>
        <item>Alquiler</item>
        <item>Transporte</item>
        <item>Impuestos</item>
        <item>Otros</item>
    </string-array>
</resources>
