<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#ffffff"
    tools:context=".MainActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        app:title="@string/app_name"
        />

    <TextView
        android:id="@+id/fecha_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="60dp"
        android:fontFamily="@font/droid_sans_bold"
        android:textColor="#000000"
        android:textSize="16sp" />

    <include
        layout="@layout/saldoactual"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="35dp"
        android:layout_marginVertical="15dp">

        <include
            layout="@layout/table"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"/>

    </LinearLayout>


    <Button
        android:id="@+id/button_nuevo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="15dp"
        android:layout_marginBottom="10dp"
        android:background="@color/colorPrimary"
        android:fontFamily="@font/droid_sans_bold"
        android:text="@string/boton_nuevo"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        android:onClick="nuevoIngreso" />

    <Button
        android:id="@+id/button_egreso"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="15dp"
        android:layout_marginBottom="10dp"
        android:background="@color/colorPrimary"
        android:fontFamily="@font/droid_sans_bold"
        android:text="@string/boton_egreso"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        android:onClick="nuevoEgreso"/>

    <Button
        android:id="@+id/button_detalle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="15dp"
        android:background="@color/colorPrimary"
        android:fontFamily="@font/droid_sans_bold"
        android:text="@string/boton_detalle"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        android:onClick="mostrarDetalle"/>

</LinearLayout>