<?xml version="1.0" encoding="utf-8"?>

<TableLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/color_negro">

    <TableRow>
        <TextView
            android:id="@+id/row"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_ingreso"
            android:textSize="16sp"
            android:layout_weight="1"
            android:gravity="start"
            android:background="#ffffff"
            android:layout_marginTop="1dp"
            android:layout_marginLeft="1dp"
            android:layout_marginBottom="1dp"
/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="a@a.com"
            android:textSize="16sp"
            android:layout_weight="1"
            android:gravity="center"
            android:background="#ffffff"
            android:layout_marginTop="1dp"
            android:layout_marginRight="1dp"
            android:layout_marginBottom="1dp"/>

    </TableRow>
    <TableRow>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="1dp"
            android:layout_marginBottom="1dp"
            android:layout_weight="1"
            android:background="#ffffff"
            android:gravity="start"
            android:text="@string/label_egreso"
            android:textSize="16sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="b@b.com"
            android:textSize="16sp"
            android:layout_weight="1"
            android:gravity="center"
            android:background="#ffffff"
            android:layout_marginRight="1dp"
            android:layout_marginBottom="1dp"/>


    </TableRow>

    <TableRow>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_gastos"
            android:textSize="16sp"
            android:layout_weight="1"
            android:gravity="start"
            android:background="#ffffff"
            android:layout_marginLeft="1dp"
            android:layout_marginBottom="1dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="c@c.com"
            android:textSize="16sp"
            android:layout_weight="1"
            android:gravity="center"
            android:background="#ffffff"
            android:layout_marginRight="1dp"
            android:layout_marginBottom="1dp"/>


    </TableRow>

</TableLayout>


