<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        app:title="@string/app_name" />

    <TextView
        android:id="@+id/nuevo_ingreso"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="60dp"
        android:fontFamily="@font/droid_sans_bold"
        android:textColor="#000000"
        android:textSize="16sp"
        android:text="@string/boton_nuevo"/>


    <android.support.v7.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp">

        <TextView
            android:id="@+id/monto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:fontFamily="@font/droid_sans_bold"
            android:text="Monto:"
            android:textColor="#000000"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/editText2Egreso"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="23dp"
            android:ems="10"
            android:inputType="number|numberDecimal" />
    </android.support.v7.widget.LinearLayoutCompat>

    <android.support.v7.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/concepto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:fontFamily="@font/droid_sans_bold"
            android:text="Concepto:"
            android:textColor="#000000"
            android:textSize="16sp" />

        <Spinner
            android:id="@+id/conceptosEgreso"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:entries="@array/conceptos" />
    </android.support.v7.widget.LinearLayoutCompat>

    <Button
        android:id="@+id/agregar_fechaEgreso"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="100dp"
        android:layout_marginTop="35dp"
        android:background="@color/colorPrimary"
        android:fontFamily="@font/droid_sans_bold"
        android:text="Seleccionar Fecha"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"/>

    <TextView
        android:id="@+id/fecha_selectedEgreso"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="25dp"
        android:layout_marginTop="15dp"
        android:textAlignment="center"
        android:text="@string/default_fecha"/>

    <android.support.v7.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/categoriaEgreso"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/droid_sans_bold"
            android:text="Categoria:"
            android:textColor="#000000"
            android:textSize="16sp" />

        <Spinner
            android:id="@+id/categoriasEgresos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:entries="@array/conceptos_egreso" />
    </android.support.v7.widget.LinearLayoutCompat>

    <Button
        android:id="@+id/aceptarEgreso"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="15dp"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="90dp"
        android:background="@color/colorPrimary"
        android:fontFamily="@font/droid_sans_bold"
        android:text="Aceptar"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        android:onClick="cargarEgreso"/>

    <Button
        android:id="@+id/cancelar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="15dp"
        android:layout_marginBottom="10dp"
        android:background="@color/colorPrimary"
        android:fontFamily="@font/droid_sans_bold"
        android:text="Cancelar"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        android:onClick="Inicio"/>


</LinearLayout>